# oracyn-engine

./: .gitignore  CMakeLists.txt
include/: glinclude.hpp  oracyn.hpp
include/backend/: vulkanbe.hpp
include/backend/be_resources/: be_shader.hpp  be_vertex.hpp
include/backend/opengl/: gl_buffer.hpp  gl_shader.hpp  render_device.hpp  renderdevice.hpp
include/backend/resources/: gl_buffer.hpp  gl_camera.hpp  gl_material.hpp  gl_mesh.hpp  gl_shader.hpp  gl_texture.hpp  gl_ubo.hpp
include/backend/vma/: vk_mem_alloc.h
include/backend/vulkan/: vulkan_allocator.hpp  vulkan_buffer.hpp  vulkan_command.hpp  vulkan_device.hpp  vulkan_image.hpp  vulkan_pipeline.hpp  vulkan_renderer.hpp  vulkan_swapchain.hpp  vulkan_sync.hpp  vulkan_uploader.hpp  vulkanbe.hpp
include/glad/glad/: glad.h
include/gltf/: gltfloader.hpp
include/renderer/: rendercontext.hpp  renderer.hpp
include/resources/: assetloader.hpp  camera.hpp  entity.hpp  inputhandler.hpp  material.hpp  mesh.hpp  scene.hpp  shader.hpp  transform.hpp  vertex.hpp
include/windowing/: window.hpp
scenes/: scene.json
shaders/: compile.sh  frag.glsl  shader.frag  shader.vert  vert.glsl  vert.spv
src/: main.cpp
src/backend/: be_shader.cpp  vulkanbe.cpp
src/backend/opengl/: gl_buffer.cpp  gl_shader.cpp  render_device.cpp  renderdevice.cpp
src/glad/: glad.c
src/gltf/: gltf.cpp
src/renderer/: rendercontext.cpp  renderer.cpp
src/resources/: assetloader.cpp  camera.cpp  entity.cpp  gltfloader.cpp  inputhandler.cpp  material.cpp  mesh.cpp  scene.cpp  shader.cpp  transform.cpp
src/windowing/: window.cpp
(+16 files in other folders)
